[package]
name = "mem2_server"
version = "0.1.0" 
description = "server for the game mem2 http + websocket on the same port"
authors = ["Luciano Bestia"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/lucianobestia/mem2_server"
categories = ["web-programming::http-server"]
keywords = ["warp", "server", "http", "websocket"]

[dependencies]
futures = "0.1"
pretty_env_logger = "0.3"
warp="0.1.15"
